--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.12.2",
+    "framer-motion": "^11.2.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.0.7",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "react-image-crop": "^11.0.5",
+    "react-router-dom": "^6.23.1",
     "tesseract.js": "^4.1.1"
   },
   "devDependencies": {
